cleanup on files

--- a/BrowseByPageMobile.html
+++ b/BrowseByPageMobile.html
@@ -9,12 +9,19 @@
     <link rel="stylesheet" type="text/css" href="css/buttons_and_icons.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
+    <link rel="stylesheet" type="text/css" href="css/entry.css">
     <link rel="stylesheet" type="text/css" href="css/templates.css">
     <link rel="stylesheet" type="text/css" href="css/landing.css">
+    <link rel="stylesheet" type="text/css" href="css/heroBanner.css">
     <link rel="stylesheet" type="text/css" href="css/bbpage.css">
     <link rel="stylesheet" type="text/css" href="css/bblisting.css">
+    <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
+    <link rel="stylesheet" type="text/css" href="css/changelocation.css">
+    <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
+    <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
+    <link rel="stylesheet" type="text/css" href="css/listingTile.css">
+    <link rel="stylesheet" type="text/css" href="css/forms_and_inputs.css">
     <link rel="stylesheet" type="text/css" href="css/dropdown.css">
-    <link rel="stylesheet" type="text/css" href="css/bbpage.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
