--- a/shoppingList_emailTemplate.html
+++ b/shoppingList_emailTemplate.html
@@ -26,7 +26,7 @@
 			   border-bottom:1px solid #ccc !important;
 		   }
 		   .count {
-			   padding:0 10px 5px 10px !important;
+			   padding:10px 10px 5px 0 !important;
 		   }
            .sl_imgHolder{
                 display:block !important;
