--- a/shoppingList_printTemplate.html
+++ b/shoppingList_printTemplate.html
@@ -34,12 +34,12 @@
         <p class="emailstorePhone">(773) 342-9032</p>
         <br>
         <p class="count" style="color:Black; font-weight:bold;border-bottom: 1px solid #ccc; padding-bottom:5px;">3 items</p>
-        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc;">
+        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc; width: 100%;">
           <tr>
             <td style="padding: 10px; vertical-align:middle;">
             <img class="itemImage" src="images/150118_02AD_3a.jpg" />
           </td>
-          <td style="vertical-align: top; padding: 10px;">
+          <td style="vertical-align: top; padding: 10px; width: 100%;">
             <p class="originalDeal" style="color: #000;font-size: 30px; font-weight: bold;">17.99</p>
             <p class="priceQualifier" style="color: #000; padding-bottom: 10px; margin-right: 10px;">(Orig. $30)</p>
             <p class="additionalInfo" stylecolor=" #000; padding: 10px 0;margin-right: 10px; font-size: 14px;">Additional information</p>
@@ -50,12 +50,12 @@
           </td>
           </tr>
         </table>
-        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc;">
+        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc; width: 100%;">
           <tr>
             <td style="padding: 10px; vertical-align:middle;">
             <img class="itemImage" src="images/150118_02AD_3a.jpg" />
           </td>
-          <td style="vertical-align: top; padding: 10px;">
+          <td style="vertical-align: top; padding: 10px; width: 100%;">
             <p class="originalDeal" style="color: #000;font-size: 30px; font-weight: bold;">17.99</p>
             <p class="priceQualifier" style="color: #000; padding-bottom: 10px; margin-right: 10px;">(Orig. $30)</p>
             <p class="additionalInfo" stylecolor=" #000; padding: 10px 0;margin-right: 10px; font-size: 14px;">Additional information</p>
@@ -67,12 +67,12 @@
           </tr>
         </table>
 
-        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc;">
+        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc; width: 100%;">
           <tr>
             <td style="padding: 10px; vertical-align:middle;">
             <img class="itemImage" src="images/150118_02AD_3a.jpg" />
           </td>
-          <td style="vertical-align: top; padding: 10px;">
+          <td style="vertical-align: top; padding: 10px; width: 100%;">
             <p class="originalDeal" style="color: #000;font-size: 30px; font-weight: bold;">17.99</p>
             <p class="priceQualifier" style="color: #000; padding-bottom: 10px; margin-right: 10px;">(Orig. $30)</p>
             <p class="additionalInfo" stylecolor=" #000; padding: 10px 0;margin-right: 10px; font-size: 14px;">Additional information</p>
