clean up of files - removing images/contain classes

--- a/landing.html
+++ b/landing.html
@@ -67,7 +67,7 @@
                         	</div>
                       	<div class="ss_holder middleBlock">
                           <div class="smallBlock smallListingBlock topBlock">
-                            <div class="containText">
+                            <div class="textContain">
                                 <div class="dealInblock">
                                     20-40% Off
                                 </div>
@@ -123,7 +123,7 @@
                               </h2>
                           </div>
                           <div class="wideBlock wideListingBlock middleBlock">
-                            <div class="containText">
+                            <div class="textContain">
                                 <div class="dealInblock">
                                     20-40% Off
                                 </div>
@@ -170,7 +170,7 @@
                               </h2>
                           </div>
                           <div class="wideBlock wideListingBlock middleBlock">
-                            <div class="containText">
+                            <div class="textContain">
                                 <div class="dealInblock">
                                     20-40% Off
                                 </div>
