--- a/listing_printTemplate.html
+++ b/listing_printTemplate.html
@@ -28,7 +28,7 @@
 
 <body>
     <div class="outerContain">
-        <img class="skinClientLogo" alt="Template_Shopluxe201301 Logo" title="Template_Shopluxe201301 Logo" src="Images/_Template_ShopLuxe_sprite_LOGOS.png" />
+        <img class="skinClientLogo" alt="Client Logo" title="Client Logo" src="Images/client_logo.png" />
         <p style="margin-top: 10px;">2140 N. Elston Ave., Chicago, IL 60614</p>
         <p class="emailstorePhone">(773) 342-9032</p>
         <br>
