--- a/shoppingList_emailTemplate.html
+++ b/shoppingList_emailTemplate.html
@@ -57,7 +57,7 @@
                     <tbody>
                         <tr>
                             <td colspan="2">
-                                <img class="skinClientLogo" alt="Template_Shopluxe201301 Logo" title="Template_Shopluxe201301 Logo" src="Images/_Template_ShopLuxe_sprite_LOGOS.png" />
+                                <img class="skinClientLogo" alt="Client Logo" title="Client Logo" src="Images/client_logo.png" />
                                 <div style="font-size:14px; font-weight:bold; margin-top:5px;">Shopping List</div>
                                 <div>
                                     <div style=" margin-top: 15px;">
