--- a/listing_emailTemplate.html
+++ b/listing_emailTemplate.html
@@ -43,7 +43,7 @@
         <tbody style="padding: 6px;font-size: 12px;color: Black;">
                 <tr>
                 <td colspan="2">
-                    <img class="skinClientLogo" alt="Template_Shopluxe201301 Logo" title="Template_Shopluxe201301 Logo" src="Images/_Template_ShopLuxe_sprite_LOGOS.png" />
+                    <img class="skinClientLogo" alt="Client Logo" title="Client Logo" src="Images/client_logo.png" />
                     <div>
                         <div style="margin-top: 10px;">
                             <div style="display: inline">2140 N. Elston Ave., Chicago, IL 60614</div>
