SASS implemented and landing page updated to use variables

--- a/header.html
+++ b/header.html
@@ -4,22 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Smart Deals Template</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/site_wide.css">
-    <link rel="stylesheet" type="text/css" href="css/buttons_and_icons.css">
-    <link rel="stylesheet" type="text/css" href="css/header.css">
-    <link rel="stylesheet" type="text/css" href="css/globalnav.css">
-    <link rel="stylesheet" type="text/css" href="css/entry.css">
-    <link rel="stylesheet" type="text/css" href="css/templates.css">
-    <link rel="stylesheet" type="text/css" href="css/landing.css">
-    <link rel="stylesheet" type="text/css" href="css/heroBanner.css">
-    <link rel="stylesheet" type="text/css" href="css/bbpage.css">
-    <link rel="stylesheet" type="text/css" href="css/bblisting.css">
-    <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
-    <link rel="stylesheet" type="text/css" href="css/changelocation.css">
-    <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
-    <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
-    <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <header class="client_header"> <!--begin client_header-->
