--- a/listing_printTemplate.html
+++ b/listing_printTemplate.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Smart Deals Template</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/changelocation.css">
-    <link rel="stylesheet" type="text/css" href="css/site_wide.css">
-    <link rel="stylesheet" type="text/css" href="css/header.css">
-    <link rel="stylesheet" type="text/css" href="css/globalnav.css">
-    <link rel="stylesheet" type="text/css" href="css/buttons.css">
-    <link rel="stylesheet" type="text/css" href="css/categorieslisting.css">
-    <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
-    <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <style>
         .outerContain{
             padding: 20px;
