more SASS updates

--- a/landing.html
+++ b/landing.html
@@ -78,7 +78,7 @@
                               </h2>
                           </div>
                   		</div>
-                       <div class="tallBlock lastBlock">
+                       <div class="tallBlock">
                           <div class="offerCount">
                                   <p class="countNumber">6</p>
                                   <p>DEALS</p>
@@ -106,13 +106,23 @@
                                   Automotive
                               </h2>
                           </div>
+                          <div class="smallBlock">
+                              <div class="offerCount">
+                                   <p class="countNumber">10</p>
+                                   <p>DEALS</p>
+                              </div>
+                                  <img class="imageContain"src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
+                              <h2>
+                                  Automotive
+                              </h2>
+                          </div>
                           <div class="wideBlock wideListingBlock middleBlock">
                             <div class="textContain">
                                 <div class="dealInblock">
                                     20-40% Off
                                 </div>
                                 <div class="pqInBlock">
-                                	each
+                                  each
                                 </div>
                                 <div class="titleInBlock">
                                     Men's Shirts
@@ -125,16 +135,6 @@
                                 </div>
                             </div>
                                 <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
-                          </div>
-                          <div class="smallBlock lastBlock">
-                              <div class="offerCount">
-                                   <p class="countNumber">10</p>
-                                   <p>DEALS</p>
-                              </div>
-                                  <img class="imageContain"src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
-                              <h2>
-                                  Automotive
-                              </h2>
                           </div>
                     </div>
                 </div><!-- landingTemplate_SWS -->
